Add Create Mission first layout

--- a/Rebels/Info.plist
+++ b/Rebels/Info.plist
@@ -36,6 +36,10 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>rebelsFont.ttf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
